--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.burst": "1.8.18",
+    "com.unity.cinemachine": "2.10.3",
     "com.unity.collab-proxy": "2.7.1",
     "com.unity.ext.nunit": "1.0.6",
     "com.unity.ide.rider": "3.0.34",
